# PyGUIAdapter

./: .gitignore  404.html  CNAME  LICENSE  README.md  README_zh-CN.md  README_zh.md  autouic.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test.py
api/: index.html
basic-types/: index.html
cancel/: index.html
changelog/: index.html
contribution/: index.html
custom-widget/: index.html
designer/: class_init_window.ui  execution_window.ui  initialization_window.ui  selection_window.ui
docs/: CNAME  CONTRIBUTING.md  README.md  _coverpage.md  background.md  basic-types.md  cancel.md  extend-types.md  icon_type.md  index.html  index.md  menu.md  multiple-functions.md  packaging.md  progressbar.md  quickstart.md  schema-object.md  semantic_types.md  style.md  toolbar.md  user-interaction.md  utility.md  widget-config.md  widget-map.md  window.md
en/: index.html
example/: customize_widget_1.py  customize_widget_2.py  get_started.py  getting_started.py  parameter_types.py  print_and_logging.py  widget_demo_lineedits.py  widget_demo_numberedits.py  widget_demo_pathedits.py  widget_demo_selectwidgets.py
examples/: about.html  add_multiple_functions.py  anchors_in_document.md  anchors_in_document.py  basic_types.py  beep_example.py  cancel_function_example.py  cancelable_function.py  choices_from_literal.py  clipboard_example.py  configs_with_widget_args.py  confirm_quit_example.py  create_file_demo.py  create_file_demo2.py  custom_icon_and_name_example.py  customize_widget_1.py  customize_widget_2.py  datetime_edits.py  demo2.py  disable_capture_system_exit_exception.py  dock_property_example.py  document.html  equation_solver.py  equation_solver_1.py  equation_solver_2.py  equation_solver_3.py  equation_solver_4.py  equation_solver_5.py  exception_example.py  exclusive_actions_example.py  extended_types.py  fn_doc.html  fn_execute_window_config_example.py  fn_execute_window_event_example.py  fn_execute_window_event_example_2.py  fn_select_window_config_example.py  fn_select_window_event_example.py  fn_select_window_toolbar_example.py  get_started.py  get_started_1.py  (+74 more)
extend-types/: index.html
icon_type/: index.html
license/: index.html
menu/: index.html
mk-docs/: cancel.md  icon_type.md  index.md  license.md  menu.md  multiple-functions.md  packaging.md  (+8 more)
(+796 files in other folders)
