[tool.poetry]
name = "pyguiadapter"
version = "1.0.4"
description = ""
authors = ["zimolab <zimolab@aliyun.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
qtpy = "^2.4.1"
qtawesome = "^1.3.1"
docstring-parser = "^0.16"
tomli = "^2.0.1"
pyqcodeeditor = ">=0.3.6"
yapf = "^0.40.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
markdown-table-generator = "^1.1.0"
jinja2 = "^3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"