[tool.poetry]
name = "pyguiadapter"
version = "1.0.8"
description = "A gui library which can turn almost any python function into a gui application"
authors = ["zimolab <zimolab@aliyun.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8, <3.14"
qtpy = "^2.4.1"
qtawesome = "^1.3.1"
docstring-parser = "^0.16"
tomli = "^2.0.2"
pyqcodeeditor = ">=0.3.7"
yapf = "^0.40.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
markdown-table-generator = "^1.1.0"
jinja2 = "^3.1.4"
pyinstaller = "^6.10.0"
mkdocs = "^1.6.1"
mkdocstrings = "^0.26.1"
mkdocstrings-python = "^1.11.1"
mkdocs-material = "^9.5.40"
mkdocs-autorefs = "^1.2.0"
mkdocs-same-dir = "^0.1.3"
mkdocs-static-i18n = "^1.2.3"
mkdocs-glightbox = "^0.4.0"
mkdocs-macros-plugin = "^1.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


#[[tool.poetry.source]]
#name = "tsinghua"
#url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
#priority = "primary"